Add logout usecase
