# src/app/swagger/api.json
@@ -141,6 +141,46 @@
         }
       }
     },
+    "/accounts/{id}/logout": {
+      "post": {
+        "summary": "Logout a specific account with a specific session",
+        "parameters": [
+          {
+            "in": "path",
+            "name": "id",
+            "type": "string",
+            "required": true
+          }
+        ],
+        "requestBody": {
+          "required": true,
+          "content": {
+            "application/json": {
+              "schema": {
+                "type": "object",
+                "required": [
+                  "session"
+                ],
+                "properties": {
+                  "session": {
+                    "type": "string",
+                    "format": "session"
+                  }
+                }
+              }
+            }
+          }
+        },
+        "responses": {
+          "200": {
+            "description": "OK"
+          },
+          "401": {
+            "description": "Unauthorized"
+          }
+        }
+      }
+    },
     "/auth/{sessionId}": {
       "get": {
         "summary": "Validate and get session information",
